[package]
name = "axum_responses"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Luciano Revillod <lrevillod2022@alu.uct.cl>"]
description = "A Simple way to use Axum responses"
readme = "README.md"
repository = "https://github.com/MrRevillod/AxumResponses"

[dependencies]
axum = "0.7.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
tokio = { version = "1.27.0", features = ["full"] }
axum-test = "14.4.0"
