[package]
name = "axum_responses"
version = "0.4.2"
edition = "2021"
license = "MIT"
authors = ["Luciano Revillod <lrevillod2022@alu.uct.cl>"]
description = "A Simple way to use Axum responses"
readme = "README.md"
repository = "https://github.com/MrRevillod/AxumResponses"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
tokio = { version = "1.45.0", features = ["full"] }
axum-test = "17.3.0"
