[package]
name = "axum_responses"
version = "0.5.3"
edition = "2021"
license = "MIT"
authors = ["Luciano Revillod <lrevillod2022@alu.uct.cl>"]
description = "Standardized JSON Responses and Error Handling for Axum Framework"
readme = "../README.md"
repository = "https://github.com/MrRevillod/AxumResponses"
keywords = ["axum", "responses", "json", "api"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.17"
tracing = "0.1.40"
axum_responses_macros = { version = "0.1.3", path = "../axum_responses_macros" }

[dev-dependencies]
tokio = { version = "1.45.0", features = ["full"] }
axum-test = "17.3.0"
