[package]
name = "ax_examples"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
axum-test = "18.4.1"
axum_responses = { path = "../axum_responses" }
serde = { version = "1.0", features = ["derive"] }
sqlx = "0.8.6"
thiserror = "2.0.17"
tokio = { version = "1.45.0", features = ["full"] }
